<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvModosTeclado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modos_de_teclado" />

            <Button
                android:id="@+id/btTextoSimple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_simple" />

            <Button
                android:id="@+id/btTextoPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_pass" />

            <Button
                android:id="@+id/btPulsaHabla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulsa_habla" />

            <TextView
                android:id="@+id/tvModoDeTeclas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modo_de_teclas" />

            <Button
                android:id="@+id/btTeclasFavoritas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favoritas" />

            <Button
                android:id="@+id/btTeclaSimple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tecla_simple" />

            <Button
                android:id="@+id/btTeclaCompuesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tecla_compuesta" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
