<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btInicio"
                android:textSize="25dp"
                android:onClick="clickInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicio" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="250dp"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btConfiguracion"
                android:textSize="25dp"
                android:onClick="clickConfiguracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuracion" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="250dp"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btAyuda"
                android:textSize="25dp"
                android:onClick="clickAyuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="250dp"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btSalir"
                android:textSize="25dp"
                android:onClick="clickSalir"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/salir" />

        </TableRow>
    </TableLayout>

</RelativeLayout>