<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical" >
				
				    <ScrollView
				        android:id="@+id/scrollView1"
				        android:layout_width="match_parent"
				        android:layout_height="match_parent" >
				
				        <LinearLayout
				            android:layout_width="match_parent"
				            android:layout_height="match_parent"
				            android:orientation="vertical" >
				
				            <TextView
				                android:id="@+id/tvModosTeclado"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/modos_de_teclado" />
				
				            <Button
				                android:id="@+id/btTextoSimple"
				                android:layout_width="match_parent"
				                android:layout_height="wrap_content"
				                android:text="@string/texto_simple" />
				
				            <Button
				                android:id="@+id/btTextoPass"
				                android:layout_width="match_parent"
				                android:layout_height="wrap_content"
				                android:text="@string/texto_pass" />
				
				            <Button
				                android:id="@+id/btPulsaHabla"
				                android:layout_width="match_parent"
				                android:layout_height="wrap_content"
				                android:text="@string/pulsa_habla" />
				
				            <TextView
				                android:id="@+id/tvModoDeTeclas"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/modo_de_teclas" />
				
				            <Button
				                android:id="@+id/btTeclasFavoritas"
				                android:layout_width="match_parent"
				                android:layout_height="wrap_content"
				                android:text="@string/favoritas" />
				
				            <Button
				                android:id="@+id/btTeclaSimple"
				                android:layout_width="match_parent"
				                android:layout_height="wrap_content"
				                android:text="@string/tecla_simple" />
				
				            <Button
				                android:id="@+id/btTeclaCompuesta"
				                android:layout_width="match_parent"
				                android:layout_height="wrap_content"
				                android:text="@string/tecla_compuesta" />
				
				
				        </LinearLayout>
				    </ScrollView>
				
				</LinearLayout>


                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical" >

				    <CheckBox
				        android:id="@+id/cbAcelerometro"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/acelerometro" />
				
				    <ImageView
				        android:id="@+id/imgTouchpadTab"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:layout_weight="0.84"
				        android:background="#363637"
				        android:src="@drawable/touchpadtab" />
				
				   <TableLayout
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:stretchColumns="1" >
				
				        <TableRow
				            android:id="@+id/tableRow2"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:background="#363637" >
				
				            <Button
				                android:id="@+id/btRaton1"
				                android:layout_width="0dp"
				 				android:layout_weight="3"
				 				android:layout_height="80sp"
				                android:text=" " />
				
				            <Button
				                android:id="@+id/btRatonCentral"
						 		android:layout_width="0dp"
						 		android:layout_weight="1"
						 		android:layout_height="80sp"
				                android:text=""
				                 />
				
				            <Button
				                android:id="@+id/btRaton2"
						 		android:layout_width="0dp"
						 		android:layout_weight="3"
						 		android:layout_height="80sp"
				                android:text=" "/>
				
				        </TableRow>
					</TableLayout>
				
				</LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"  >
				   
					<ScrollView
					        android:id="@+id/scrollView1"
					        android:layout_width="318dp"
					        android:layout_height="match_parent"
					            android:gravity="center"  >
					
						
						        <TableLayout
						            android:id="@+id/tlTeclas"
						            android:layout_width="318dp"
						            android:layout_height="wrap_content"
						            android:layout_alignParentBottom="true"
						            android:layout_centerHorizontal="true"
						            android:stretchColumns="1" >
						            
						           <TableRow
						                android:id="@+id/tableRow0"
						                android:layout_width="wrap_content"
						                android:layout_height="wrap_content" >
					
						               <Spinner
						                   	android:id="@+id/spPlantillas"
						                   	android:layout_marginTop="50dp"
						  					android:layout_marginBottom="50dp"
						                   	android:layout_height="60dp"
						                   	android:layout_weight="3"
						                   	android:layout_width="106dp"/>
						                
						           </TableRow>
						
						           <TableRow
						                android:id="@+id/tableRow1"
						                android:layout_width="wrap_content"
						                android:layout_height="wrap_content" >
						
						                <Button
						                    android:id="@+id/btTecla0"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						                <Button
						                    android:id="@+id/btTecla1"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                                
						                <Button
						                    android:id="@+id/btTecla2"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						
						                                
						            </TableRow>
						
						            <TableRow
						                android:id="@+id/tableRow2"
						                android:layout_width="wrap_content"
						                android:layout_height="wrap_content" >
						                
						                <Button
						                    android:id="@+id/btTecla3"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						                <Button
						                    android:id="@+id/btTecla4"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                                
						                <Button
						                    android:id="@+id/btTecla5"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						            </TableRow>
						
						            <TableRow
						                android:id="@+id/tableRow3"
						                android:layout_width="wrap_content"
						                android:layout_height="wrap_content" >
						                
						                <Button
						                    android:id="@+id/btTecla6"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						                <Button
						                    android:id="@+id/btTecla7"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                                
						                <Button
						                    android:id="@+id/btTecla8"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						            </TableRow>
						
						            <TableRow
						                android:id="@+id/tableRow4"
						                android:layout_width="wrap_content"
						                android:layout_height="wrap_content" >
						                
						                <Button
						                    android:id="@+id/btTecla9"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						                <Button
						                    android:id="@+id/btTecla10"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                                
						                <Button
						                    android:id="@+id/btTecla11"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						            </TableRow>
						            
						            <TableRow
						                android:id="@+id/tableRow5"
						                android:layout_width="wrap_content"
						                android:layout_height="wrap_content" >
						                
						                <Button
						                    android:id="@+id/btTecla12"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						                <Button
						                    android:id="@+id/btTecla13"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                                
						                <Button
						                    android:id="@+id/btTecla14"
						                    android:layout_width="106dp"
						                    android:layout_height="106dp"
						                    android:text=" "
						                    android:layout_weight="1" />
						                
						            </TableRow>
						            
						        </TableLayout>
						
					
					    
					    </ScrollView>

                    
                </LinearLayout>
                
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>